--- a/login_template3.html
+++ b/login_template3.html
@@ -11,26 +11,30 @@
             box-sizing: border-box;
         }
 
+        html {
+            height: 100%;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 20px;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            padding: 20px;
-            position: relative;
-            overflow: hidden;
         }
 
         /* Animated background circles */
         body::before,
         body::after {
             content: '';
-            position: absolute;
+            position: fixed;
             border-radius: 50%;
             background: rgba(255, 255, 255, 0.1);
             animation: float 8s infinite ease-in-out;
+            z-index: 0;
         }
 
         body::before {
@@ -70,17 +74,14 @@
             border: 1px solid rgba(255, 255, 255, 0.2);
             position: relative;
             z-index: 1;
-            animation: slideIn 0.5s ease-out;
         }
 
         @keyframes slideIn {
             from {
                 opacity: 0;
-                transform: translateY(-30px);
             }
             to {
                 opacity: 1;
-                transform: translateY(0);
             }
         }
 
@@ -324,16 +325,7 @@
             alert(`로그인 시도:\n이메일: ${email}\n이메일 저장: ${saveEmail ? '예' : '아니오'}`);
         }
 
-        // 폼 입력 애니메이션 효과
-        document.querySelectorAll('input').forEach(input => {
-            input.addEventListener('focus', function() {
-                this.parentElement.style.transform = 'translateX(2px)';
-            });
-            
-            input.addEventListener('blur', function() {
-                this.parentElement.style.transform = 'translateX(0)';
-            });
-        });
+        // 폼 입력 애니메이션 효과 (제거됨)
     </script>
 </body>
 </html>
