--- a/login_template4.html
+++ b/login_template4.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Login - Template 4</title>
+    <!-- Font Awesome 6.5.1 (LTS) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -105,6 +107,7 @@
             margin: 0 auto 20px;
             font-size: 28px;
             box-shadow: 0 8px 20px rgba(52, 211, 153, 0.3);
+            color: #ffffff;
         }
 
         .login-header h1 {
@@ -305,7 +308,9 @@
 <body>
     <div class="login-container">
         <div class="login-header">
-            <div class="logo">🔐</div>
+            <div class="logo">
+                <i class="fas fa-lock"></i>
+            </div>
             <h1>Welcome Back</h1>
             <p>로그인하여 계속하세요</p>
         </div>
@@ -322,7 +327,7 @@
                         required
                         autocomplete="email"
                     >
-                    <span class="input-icon">✉️</span>
+                    <span class="input-icon"><i class="fas fa-envelope"></i></span>
                 </div>
             </div>
 
@@ -337,7 +342,7 @@
                         required
                         autocomplete="current-password"
                     >
-                    <span class="input-icon">🔒</span>
+                    <span class="input-icon"><i class="fas fa-lock"></i></span>
                 </div>
             </div>
 
