--- a/modern_login.html
+++ b/modern_login.html
@@ -348,9 +348,13 @@
             });
         });
 
-        // Load saved theme
+        // Load saved theme and set initial state
         const savedTheme = localStorage.getItem('theme') || 'dark';
         document.documentElement.setAttribute('data-theme', savedTheme);
+        
+        // Remove all active classes first
+        document.querySelectorAll('.theme-option').forEach(opt => opt.classList.remove('active'));
+        // Then add active class to saved theme
         document.querySelector(`.theme-option[data-theme="${savedTheme}"]`)?.classList.add('active');
     </script>
 </body>
